--- a/templates/cfv.html
+++ b/templates/cfv.html
@@ -1,126 +1,128 @@
 {% extends "body.html" %}
 
 {% block include_js %}
-{#  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA=" crossorigin="anonymous"></script>#}
-{#  <script async src="{{ url_for('static', filename='pyconsk/js/form.js') }}"></script>#}
+  {#  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA=" crossorigin="anonymous"></script>#}
+  {#  <script async src="{{ url_for('static', filename='pyconsk/js/form.js') }}"></script>#}
 {% endblock %}
 
 {% block content %}
   <div class="page-banner-area banner9">
-		<!-- Subpage title start -->
-		<div class="page-banner-title">
+    <!-- Subpage title start -->
+    <div class="page-banner-title">
       <div class="text-center">
         <h1>{{ _('Call for volunteers') }}</h1>
       </div>
     </div><!-- Subpage title end -->
-	</div><!-- Page Banner end -->
+  </div><!-- Page Banner end -->
 
   <section id="main-container" class="main-container">
 
-<div class="container">
+    <div class="container">
 
-  <div class="row">
-    <div class="col-md-12">
+      <div class="row">
+        <div class="col-md-12">
 
-      <p class="lead"><strong>{{ _('We need you to help organize PyCon SK 2019!') }}</strong></p>
+          <p class="lead"><strong>{{ _('We need you to help organize PyCon SK 2019!') }}</strong></p>
 
-      <p class="text-justify">
-        {{ _('PyCon SK is organized by the Python community and for the Python community.') }}
-        {{ _('All of our staff members are volunteers. We are looking for a new members to join the team of organizers.') }}
-        {{ _('This is great opportunity to meet people, make new friends and get the opportunity to learn new things.') }}
-      </p>
+          <p class="text-justify">
+            {{ _('PyCon SK is organized by the Python community and for the Python community.') }}
+            {{ _('All of our staff members are volunteers. We are looking for a new members to join the team of organizers.') }}
+            {{ _('This is great opportunity to meet people, make new friends and get the opportunity to learn new things.') }}
+          </p>
 
-      <p class="text-justify">
-        {{ _('As a volunteer you get a free ticket to the  conference as a thank you for making the change  in our society.') }}
-        {{ _('If you spend more than 40 hours during the year as a volunteer you can give 3%% to any registered non-profit in your tax return.') }}
-      </p>
+          <p class="text-justify">
+            {{ _('As a volunteer you get a free ticket to the  conference as a thank you for making the change  in our society.') }}
+            {{ _('If you spend more than 40 hours during the year as a volunteer you can give 3%% to any registered non-profit in your tax return.') }}
+          </p>
 
-<form action="https://docs.google.com/forms/d/e/1FAIpQLSf4bOJdE201B_VyhHrxP_z_Fq1IGLaqxnv7KZVAVQ-C30DFUA/formResponse"
-      target="_self"
-      id="bootstrapForm"
-      method="POST">
-    <fieldset>
-        <legend for="">Email <span class="required">*</span></legend>
-        <div class="form-group">
-            <input id="emailAddress" type="email" name="emailAddress" class="form-control" required>
+          <form action="https://docs.google.com/forms/d/e/1FAIpQLSf4bOJdE201B_VyhHrxP_z_Fq1IGLaqxnv7KZVAVQ-C30DFUA/formResponse"
+                target="_self"
+                id="bootstrapForm"
+                method="POST">
+            <fieldset>
+              <legend for="">Email <span class="required">*</span></legend>
+              <div class="form-group">
+                <input id="emailAddress" type="email" name="emailAddress" class="form-control" required>
+              </div>
+            </fieldset>
+
+
+            <!-- Field type: "short" id: "2142309847" -->
+            <fieldset>
+              <legend for="2142309847">{{ _('Your name') }} <span class="required">*</span></legend>
+              <div class="form-group">
+                <input id="1380932580" type="text" name="entry.1380932580" class="form-control" required>
+              </div>
+            </fieldset>
+
+
+            <!-- Field type: "short" id: "214745337" -->
+            <fieldset>
+              <legend for="214745337">{{ _('Your phone') }} <span class="required">*</span></legend>
+              <div class="form-group">
+                <input id="982333403" type="text" name="entry.982333403" class="form-control" required>
+              </div>
+            </fieldset>
+
+
+            <!-- Field type: "paragraph" id: "1579718046" -->
+            <fieldset>
+              <legend for="1579718046">{{ _('Something about you') }}</legend>
+              <div class="form-group">
+                <p class="help-block">{{ _('We would like to know you, write something about yourself and also why you would like to help out...') }}</p>
+                <textarea id="2072744410" name="entry.2072744410" class="form-control"></textarea>
+              </div>
+            </fieldset>
+
+
+            <!-- Field type: "short" id: "712730357" -->
+            <fieldset>
+              <legend for="712730357">{{ _('What is your time estimate you can spend as volunteer?') }}
+                <span class="required">*</span></legend>
+              <div class="form-group">
+                <p class="help-block">{{ _('We need just rought estimate, for example: our daily, two hours a week...') }}</p>
+                <input id="332887087" type="text" name="entry.332887087" class="form-control" required>
+              </div>
+            </fieldset>
+
+
+            <!-- Field type: "paragraph" id: "1780493620" -->
+            <fieldset>
+              <legend for="1780493620">{{ _('What would you like to do?') }} <span class="required">*</span></legend>
+              <div class="form-group">
+                <p class="help-block">{{ _('Let us know what you are experienced in? If you have a vision and no experience, that is alright, write down what you would like to do and surely we\'ll find a tasks to realize the vision.') }}</p>
+                <textarea id="287506974" name="entry.287506974" class="form-control" required></textarea>
+              </div>
+            </fieldset>
+
+
+            <!-- Field type: "short" id: "400429884" -->
+            <fieldset>
+              <legend for="400429884">{{ _('Where did you find out about SPy o.z.?') }} <span class="required">*</span>
+              </legend>
+              <div class="form-group">
+                <input id="1889735954" type="text" name="entry.1889735954" class="form-control" required>
+              </div>
+            </fieldset>
+
+            <input type="hidden" name="fvv" value="1">
+            <input type="hidden" name="fbzx" value="-1757665975123586609">
+            <!--
+                CAVEAT: In multipages (multisection) forms, *pageHistory* field tells to google what sections we've currently completed.
+                This usually starts as "0" for the first page, then "0,1" in the second page... up to "0,1,2..N" in n-th page.
+                Keep this in mind if you plan to change this code to recreate any sort of multipage-feature in your exported form.
+                We're setting this to the total number of pages in this form because we're sending all fields from all the section together.
+            -->
+            <input type="hidden" name="pageHistory" value="0">
+
+            <p class="text-center">
+              <input class="btn btn-primary btn-lg" type="submit" value="{{ _('Submit') }}">
+            </p>
+          </form>
+
         </div>
-    </fieldset>
-
-
-    <!-- Field type: "short" id: "2142309847" -->
-    <fieldset>
-        <legend for="2142309847">{{ _('Your name') }} <span class="required">*</span></legend>
-        <div class="form-group">
-            <input id="1380932580" type="text" name="entry.1380932580" class="form-control" required>
-        </div>
-    </fieldset>
-
-
-    <!-- Field type: "short" id: "214745337" -->
-    <fieldset>
-        <legend for="214745337">{{ _('Your phone') }} <span class="required">*</span></legend>
-        <div class="form-group">
-            <input id="982333403" type="text" name="entry.982333403" class="form-control" required>
-        </div>
-    </fieldset>
-
-
-    <!-- Field type: "paragraph" id: "1579718046" -->
-    <fieldset>
-        <legend for="1579718046">{{ _('Something about you') }}</legend>
-        <div class="form-group">
-            <p class="help-block">{{ _('We would like to know you, write something about yourself and also why you would like to help out...') }}</p>
-            <textarea id="2072744410" name="entry.2072744410" class="form-control" ></textarea>
-        </div>
-    </fieldset>
-
-
-    <!-- Field type: "short" id: "712730357" -->
-    <fieldset>
-        <legend for="712730357">{{ _('What is your time estimate you can spend as volunteer?') }} <span class="required">*</span></legend>
-        <div class="form-group">
-            <p class="help-block">{{ _('We need just rought estimate, for example: our daily, two hours a week...') }}</p>
-            <input id="332887087" type="text" name="entry.332887087" class="form-control" required>
-        </div>
-    </fieldset>
-
-
-    <!-- Field type: "paragraph" id: "1780493620" -->
-    <fieldset>
-        <legend for="1780493620">{{ _('What would you like to do?') }} <span class="required">*</span></legend>
-        <div class="form-group">
-            <p class="help-block">{{ _('Let us know what you are experienced in? If you have a vision and no experience, that is alright, write down what you would like to do and surely we\'ll find a tasks to realize the vision.') }}</p>
-            <textarea id="287506974" name="entry.287506974" class="form-control" required></textarea>
-        </div>
-    </fieldset>
-
-
-    <!-- Field type: "short" id: "400429884" -->
-    <fieldset>
-        <legend for="400429884">{{ _('Where did you find out about SPy o.z.?') }} <span class="required">*</span></legend>
-        <div class="form-group">
-            <input id="1889735954" type="text" name="entry.1889735954" class="form-control" required>
-        </div>
-    </fieldset>
-
-    <input type="hidden" name="fvv" value="1">
-    <input type="hidden" name="fbzx" value="-1757665975123586609">
-    <!--
-        CAVEAT: In multipages (multisection) forms, *pageHistory* field tells to google what sections we've currently completed.
-        This usually starts as "0" for the first page, then "0,1" in the second page... up to "0,1,2..N" in n-th page.
-        Keep this in mind if you plan to change this code to recreate any sort of multipage-feature in your exported form.
-        We're setting this to the total number of pages in this form because we're sending all fields from all the section together.
-    -->
-    <input type="hidden" name="pageHistory" value="0">
-
-    <p class="text-center">
-      <input class="btn btn-primary btn-lg" type="submit" value="{{ _('Submit') }}">
-    </p>
-</form>
+      </div>
 
     </div>
-  </div>
-
-</div>
   </section>
 {% endblock %}
