--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -2,34 +2,34 @@
 {% block content %}
 
   <div class="page-banner-area banner7">
-		<!-- Subpage title start -->
-		<div class="page-banner-title">
+    <!-- Subpage title start -->
+    <div class="page-banner-title">
       <div class="text-center">
         <h1>{{ _('Sponsors &amp; Partners') }}</h1>
       </div>
     </div><!-- Subpage title end -->
-	</div><!-- Page Banner end -->
+  </div><!-- Page Banner end -->
 
 
   <section id="main-container" class="main-container">
-		<div class="container">
-			<div class="row text-center">
-				<span class="icon-wrap"><i class="fa fa-handshake-o"></i></span>
-				<h2 class="section-title">{{ _('Sponsors &amp; Partners') }}</h2>
-				<p class="section-sub-title">{{ _('They helping us make this event possible.') }}</p>
-			</div><!--/ Title row end -->
+    <div class="container">
+      <div class="row text-center">
+        <span class="icon-wrap"><i class="fa fa-handshake-o"></i></span>
+        <h2 class="section-title">{{ _('Sponsors &amp; Partners') }}</h2>
+        <p class="section-sub-title">{{ _('They helping us make this event possible.') }}</p>
+      </div><!--/ Title row end -->
 
-			<div class="row text-center">
-				<h3 class="sponsor-title">{{ _('Gold Sponsors') }}</h3>
+      <div class="row text-center">
+        <h3 class="sponsor-title">{{ _('Gold Sponsors') }}</h3>
 
-				<div class="col-xs-12 col-sm-6 col-md-6">
-					<div class="sponsor-details">
-						<a href="#" class="sponsor-logo highlight">
-							<img class="img-responsive" src="images/sponsors/sponsor1.png" alt="" />
-						</a>
-						<div class="sponsor-info">
-							<h4 class="sponsor-name">Kistler</h4>
-							<p>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="sponsor-details">
+            <a href="#" class="sponsor-logo highlight">
+              <img class="img-responsive" src="images/sponsors/sponsor1.png" alt=""/>
+            </a>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Kistler</h4>
+              <p>
                 {{ _('The Kistler Group is a Swiss high-tech company and the global market
                   leader in dynamic measurement technology. We develop and supply sensors, electronics and software
                   backed up by a full range of services. In Bratislava we develop software for the next generation of
@@ -39,41 +39,41 @@
                   that people can trust; we create measurement systems that save lives. Kistler helps to shape a better
                   future.') }}
               </p>
-							<div class="sponsor-web-link">
-								<a href="#"><i class="fa fa-globe"></i></a>
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-							</div>
-						</div><!-- Info end -->
-					</div><!-- Sponsor details -->
-				</div><!-- Col 1 end -->
-			</div><!--/ Content row 1 end -->
+              <div class="sponsor-web-link">
+                <a href="#"><i class="fa fa-globe"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
+      </div><!--/ Content row 1 end -->
 
-			<div class="row text-center">
-				<h3 class="sponsor-title">{{ _('Media Partners') }}</h3>
+      <div class="row text-center">
+        <h3 class="sponsor-title">{{ _('Media Partners') }}</h3>
 
-				<div class="col-xs-12 col-sm-3 col-md-3">
-					<div class="sponsor-details">
-						<a href="#" class="sponsor-logo highlight">
-							<img class="img-responsive" src="images/sponsors/sponsor4.png" alt="" />
-						</a>
-						<div class="sponsor-info">
-							<h4 class="sponsor-name">robime.it</h4>
-							<p>&nbsp;</p>
-							<div class="sponsor-web-link">
-								<a href="#"><i class="fa fa-globe"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-							</div>
-						</div><!-- Info end -->
-					</div><!-- Sponsor details -->
-				</div><!-- Col 1 end -->
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <a href="#" class="sponsor-logo highlight">
+              <img class="img-responsive" src="images/sponsors/sponsor4.png" alt=""/>
+            </a>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">robime.it</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+                <a href="#"><i class="fa fa-globe"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
       </div>
 
     </div>
   </section>
 
   <section id="sponsoring" class="sponsoring-area">
-		<div class="container">
+    <div class="container">
       <div class="row text-center">
         <h2 class="sponsor-title">{{ _('Why become a sponsor?') }}</h2>
         <p class="lead">{{ _('We need you — PyCon SK 2019 in Bratislava seeks for sponsors and partners!') }}</p>
@@ -95,64 +95,65 @@
         </p>
 
         <p class="text-center">
-          <a href="mailto:sponsors@pycon.sk" class="btn btn-primary btn-lg"><span class="oi oi-pulse"></span> sponsors@pycon.sk <span class="oi oi-pulse"></span></a>
+          <a href="mailto:sponsors@pycon.sk" class="btn btn-primary btn-lg"><span class="oi oi-pulse"></span>
+            sponsors@pycon.sk <span class="oi oi-pulse"></span></a>
         </p>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
-					<div class="sponsor-details">
-						<div class="sponsor-info">
-							<h4 class="sponsor-name">{{ _('Marketing') }}</h4>
-			      	<p class="text-justify">
+          <div class="sponsor-details">
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">{{ _('Marketing') }}</h4>
+              <p class="text-justify">
                 {{ _('Looking for new users for your product? Such people can be found at PyCon - they also will look for new products and ideas.') }}
               </p>
-						</div><!-- Info end -->
-					</div><!-- Sponsor details -->
-				</div><!-- Col 1 end -->
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
 
         <div class="col-xs-12 col-sm-6 col-md-6">
-					<div class="sponsor-details">
-						<div class="sponsor-info">
-							<h4 class="sponsor-name">{{ _('Community') }}</h4>
+          <div class="sponsor-details">
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">{{ _('Community') }}</h4>
               <p class="text-justify">
                 {{ _('Looking for new contributors and partners for your open source project? PyCon is the place, where they also will look for you.') }}
               </p>
-						</div><!-- Info end -->
-					</div><!-- Sponsor details -->
-				</div><!-- Col 1 end -->
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
 
         <div class="col-xs-12 col-sm-6 col-md-6">
-					<div class="sponsor-details">
-						<div class="sponsor-info">
-							<h4 class="sponsor-name">{{ _('Recruitment') }}</h4>
-							<p class="text-justify">
-              {{ _('Are you looking for programmers? PyCon is the best place for meeting new talents. Many participants will be experienced developers looking for their next big career move.') }}
+          <div class="sponsor-details">
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">{{ _('Recruitment') }}</h4>
+              <p class="text-justify">
+                {{ _('Are you looking for programmers? PyCon is the best place for meeting new talents. Many participants will be experienced developers looking for their next big career move.') }}
               </p>
-						</div><!-- Info end -->
-					</div><!-- Sponsor details -->
-				</div><!-- Col 1 end -->
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
 
         <div class="col-xs-12 col-sm-6 col-md-6">
-					<div class="sponsor-details">
-						<div class="sponsor-info">
-							<h4 class="sponsor-name">{{ _('Audience') }}</h4>
+          <div class="sponsor-details">
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">{{ _('Audience') }}</h4>
               <p class="text-justify">
                 {{ _('Want to get your message across to the people, so they talk about you? PyCon is a great opportunity. People in the Python community like to discover and share new things.') }}
               </p>
-						</div><!-- Info end -->
-					</div><!-- Sponsor details -->
-				</div><!-- Col 1 end -->
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
 
 
         <div class="col-sm-push-3 col-md-push-3 col-xs-12 col-sm-6 col-md-6">
-					<div class="sponsor-details">
-						<div class="sponsor-info">
-							<h4 class="sponsor-name">{{ _('Support') }}</h4>
+          <div class="sponsor-details">
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">{{ _('Support') }}</h4>
               <p class="text-justify">
                 {{ _('Are you using Python in your company? Support for community events is an excellent opportunity to contribute back.') }}
               </p>
-						</div><!-- Info end -->
-					</div><!-- Sponsor details -->
-				</div><!-- Col 1 end -->
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
       </div>
 
     </div>
