reviewed text, updated translations and new static (#47)
* reviewed text, updated translations and new static
* fixed indentation

--- a/templates/cfv.html
+++ b/templates/cfv.html
@@ -26,12 +26,12 @@
 
           <p class="text-justify">
             {{ _('PyCon SK is organized by the Python community and for the Python community.') }}
-            {{ _('All of our staff members are volunteers. We are looking for a new members to join the team of organizers.') }}
+            {{ _('All of our staff members are volunteers. We are looking for new members to join the team of organizers.') }}
             {{ _('This is great opportunity to meet people, make new friends and get the opportunity to learn new things.') }}
           </p>
 
           <p class="text-justify">
-            {{ _('As a volunteer you get a free ticket to the  conference as a thank you for making the change  in our society.') }}
+            {{ _('As a volunteer you get a free ticket to the conference as a thank you for making the change in our society.') }}
             {{ _('If you spend more than 40 hours during the year as a volunteer you can give 3%% to any registered non-profit in your tax return.') }}
           </p>
 
