Minor updates in sponsor page and translations

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2040,6 +2040,11 @@ ul.navbar-nav > li.header-ticket:hover > a:after{
 	margin: 0;
 }
 
+.sponsor-details img {
+	text-align: center;
+	margin: 0 auto;
+}
+
 .sponsor-info .sponsor-name {
 	font-size: 23px;
 	margin-top: 20px;
